iss #2026. Added bar charts for showing of statistics. Changed styles for correct displaying on mobile devices as well.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,6 +22,11 @@
 
 .filterPanel {
     display: inline-block;
-    width: 15%;
+    width: 30%;
     margin-left: 20px;
+}
+
+.chart {
+    width: 60%;
+    display: inline-block;
 }
